--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -22,11 +22,12 @@ body, form, ul, table {
   border-bottom: 1px solid #e5e5e5;
 }
 .logo {
+	font-family: 'Helvetica Neue';
+	font-size: 3em;
   width: 519px;
   height: 71px;
   display: inline-block;
-  margin-bottom: 1em;
-  background-image: url("/images/phoenix.png");
+  background-image: url("/");
   background-size: 519px 71px;
 }
 
