--- a/lib/hello_web/templates/layout/app.html.eex
+++ b/lib/hello_web/templates/layout/app.html.eex
@@ -16,7 +16,7 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="https://maxgrok.netlify.com/">Get Started!</a></li>
+            <li><a href="https://maxgrok.netlify.com/forty-fifth-post/">Get Started!</a></li>
           </ul>
         </nav>
         <span class="logo">Max's Chat App</span>
